hid script tag in html nodes (should also supress js attributes) moved paste event to body which seems to work better moved z-index of config to be above resize handles fixed quine to not break on script close tag

--- a/css/liquid-space.css
+++ b/css/liquid-space.css
@@ -47,6 +47,7 @@ a {
 	background-color: #999;
 }
 .controls_wrapper {
+	z-index: 100; // higher the resizeable handles
 }
 .controls {
 	width:30%;
